<resources>
    <string name="app_name">Highway 2 Help</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_aidant">LoginAidant</string>
    <string name="title_activity_login_patient">LoginPatient</string>
    <string name="title_activity_register_aidant">RegisterAidantActivity</string>
    <string name="title_activity_register_patient">RegisterPatientActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="welcome"> Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_aidant">HomeAidantActivity</string>
    <string name="title_activity_contact_list">ContactList</string>
    <string name="title_activity_contact_page">ContactPage</string>

    <!-- Repertoire -->
    <string name="ajouter">Ajouter Contact</string>
    <string name="supprimer">Supprimer Contact</string>
    <string name="modifier">Modifier Contact</string>
    <string name="first_name">Nom</string>
    <string name="second_name">Prenom</string>
    <string name="Email">Email</string>
    <string name="Number">Number</string>
    <string name="maj">MAJ Repertoire</string>
    <string name="add">Ajouter</string>
    <string name="saisir_nom">Saisit le nom du contatct que vous voulez supprimer </string>
    <string name="title_activity_home_patient">HomePatient</string>
    <string name="title_activity_decision_tree">DecisionTree</string>
    <string name="title_activity_detentes">Detentes</string>
    <string name="title_activity_capteurs">capteurs</string>
    <string name="title_activity_sensor">Sensor</string>

</resources>
