<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/maj"
        android:paddingTop="70dp"
        android:paddingBottom="15dp"
        android:paddingLeft="7dp"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="#26ae90"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/maj"/>

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:paddingLeft="50dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/maj"
        />

    <EditText
        android:id="@+id/first_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_below="@+id/maj"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/first_name"
        android:layout_alignBaseline="@+id/first_name"
        />

    <TextView
        android:id="@+id/second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:gravity="left"
        android:paddingLeft="50dp"
        android:textSize="20dp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:layout_below="@+id/first_name"
        />

    <EditText
        android:id="@+id/second_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:hint="@string/second_name"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/first_name_txt"
        android:layout_toRightOf="@+id/second_name"
        android:layout_alignBaseline="@+id/second_name"

        />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:paddingLeft="50dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/second_name"
        />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_below="@+id/second_name"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/email"
        android:layout_alignBaseline="@+id/email"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number"
        android:gravity="left"
        android:paddingLeft="50dp"
        android:textSize="20dp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:layout_below="@+id/email"
        />

    <EditText
        android:id="@+id/number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:hint="@string/Number"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/email_txt"
        android:layout_toRightOf="@+id/number"
        android:layout_alignBaseline="@+id/number"
        />



</RelativeLayout>
